--- a/pages/TP-TILED.html
+++ b/pages/TP-TILED.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP TILED</title>
+    <style> body{margin:0} </style>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+    <title>tP Tiled</title>
 </head>
 <body>
-    
+    <!-- Carga del archivo configuración de Phaser -->
+    <script type="module" src="../src/js/index.js"></script>
 </body>
-</html>
+</html>  
