--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>
    
 <div>
-    <font size="6"><a href="./pages/TP-TILED.html">TP Tiled</a></font> 
+    <font size="6"><a href="https://santiweimer.github.io/juego-escenas/">TP Tiled</a></font> 
 </div>
     
     
